[package]
name = "git-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2018"

# DON'T EDIT THIS!
#
# This is only for local usage, any changes here will not reflect when
# CodeCrafters tests your code.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] } # http requests
bytes = "0.5" # helps wrap responses from reqwest
tokio = { version = "0.2", features = ["full"] } # async http requests
flate2 = "1.0" # gzip compression
sha-1 = "0.9.0"
anyhow = "1.0" # Nicer error handling
structopt = "0.3.15" # command line interface
hex = "0.4.2" # Encoding/Decoding binary data
chrono = "0.4.15" # Time handling
futures = "0.3.5"
async-recursion = "0.3.1"
